--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 
 <body>
     <div class="wrap">
-        <canvas id="three-canvas"></canvas>
+        <!-- <canvas id="three-canvas"></canvas>
         <div class="sections">
             <section class="section a">
-                <h2>01</h2>
+                <h2>아무것도 몰랐던 새끼호랑이에서</h2>
             </section>
             <section class="section a">
-                <h2>02</h2>
+                <h2>누구보다 빠르게 성장하여</h2>
             </section>
             <section class="section a">
-                <h2>03</h2>
+                <h2>혼자 사냥을 나서는</h2>
             </section>
             <section class="section a">
-                <h2>04</h2>
+                <h2>맹수가 될 때까지</h2>
             </section>
             <section class="section a">
-                <h2>05</h2>
+                <h2>달려나가겠습니다.</h2>
             </section>
-        </div>
+        </div> -->
 
         <section class="fix_motion" id="top">
             <!-- 스크롤할 거리를 설정하는 엘리먼트 -->
@@ -68,21 +68,21 @@
                         <nav class="nav_list">
                             <ul class="list">
                                 <li>
-                                    <a href="" class="active">
+                                    <a href="#none" class="active">
                                         <span class="txt">더 멋있고 더 창의적인</span>
                                         <span class="mask"></span>
                                         <span class="mask2"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="#none">
                                         <span class="txt">웹사이트를 만들고싶은</span>
                                         <span class="mask"></span>
                                         <span class="mask2"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="#none">
                                         <span class="txt">새끼호랑이 김무선입니다.</span>
                                         <span class="mask"></span>
                                         <span class="mask2"></span>
@@ -95,13 +95,137 @@
                 <div class="bg_rotate"></div>
             </article>
         </section>
+        <section id="txtMask" class="section_textmask sec_skill">
+            <article class="txt_area">
+                <ul class="motion_area">
+                    <li class="text_box">
+                        <div class="left">
+                            <p class="txt_com txt01">
+                                <span>새끼호랑이는</span>
+                            </p>
+                        </div>
+                        <div class="right">
+                            <p class="txt_com txt01">
+                                <span>새끼호랑이는</span>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="text_box type02">
+                        <div class="left">
+                            <p class="txt_com txt01">
+                                <span>이런걸</span>
+                            </p>
+                        </div>
+                        <div class="right">
+                            <p class="txt_com txt01">
+                                <span>이런걸</span>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="text_box type03">
+                        <div class="left">
+                            <p class="txt_com txt01">
+                                <span>할줄압니다.</span>
+                            </p>
+                        </div>
+                        <div class="right">
+                            <p class="txt_com txt01">
+                                <span>할줄압니다.</span>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </article>
+        </section>
+        <section class="skill_list">
+            <div class="skill_icon">
+                <div class="photo"><img src="./images/photo.png" alt="photo"></div>
+                <div class="ill"><img src="./images/ill.png" alt="ill"></div>
+                <div class="xd"><img src="./images/xd.png" alt="xd"></div>
+                <div class="html"><img src="./images/html.png" alt="html"></div>
+                <div class="css"><img src="./images/css.png" alt="css"></div>
+            </div>
+            <div class="skill_txt1">
+                <p>웹표준, 웹 접근성을 고려한 시멘틱 마크업 작업이 가능합니다.</p>
+                <p>HTML과 CSS로 주어진 디자인 레이아웃에 따라 페이지를 디자인할 수 있습니다.</p>
+                <p>CSS Media Query를 사용하여 반응형 웹을 만들 수 있습니다.</p>
+            </div>
+            <div class="skill_txt2">
+                <p>Java Script, JQuery와 React를 사용하여 DOM 객체를 제어할 수 있습니다</p>
+                <p>CSS와 JavaScript를 활용한 동적 모션을 구현할 수 있습니다.</p>
+                <p>WebGL 라이브러리 three.js를 이용한 3D 웹 구현을 할 수 있습니다.</p>
+            </div>
+            <div class="skill_icon2">
+                <div class="js"><img src="./images/js.png" alt="js"></div>
+                <div class="jquery"><img src="./images/jquery.png" alt="jquery"></div>
+                <div class="react"><img src="./images/react.png" alt="react"></div>
+                <div class="node"><img src="./images/node.png" alt="node"></div>
+                <div class="three"><img src="./images/three.png" alt="three"></div>
+            </div>
+        </section>
+        <section class="scroll_box sec02">
+            <div class="fix_box">
+                <p class="txt">새끼호랑이는</p>
+                <p class="txt">이런걸</p>
+                <p class="txt">만듭니다.</p>
+            </div>
+        </section>
+        <section class="sec03">
+            <h2 class="fix_tit">
+                <!-- 타이틀 -->
+                <span>HELLO :D</span>
+                <strong></strong>
+            </h2>
+            <div id="a" class="section03 fixed" style="background-color: aqua;"></div>
+            <div id="b" class="section03" style="background-color: aquamarine;"></div>
+            <div id="c" class="section03" style="background-color: blueviolet;"></div>
+            <div id="d" class="section03 fixed" style="background-color: brown;"></div>
+            <ul class="nav_list">
+                <!-- 네비게이션 -->
+                <li>
+                    <a href="#a" class="active">
+                        <i class="fa"></i>
+                        <span>GentleMonster</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#b">
+                        <i class="fa"></i>
+                        <span>GenesisBoutique</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#c">
+                        <i class="fa"></i>
+                        <span>Garts</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#d">
+                        <i class="fa"></i>
+                        <span>Backsansu</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="cube_wrap">
+                <div class="cube_box">
+                    <div class="cube_face front"></div>
+                    <div class="cube_face back"></div>
+                    <div class="cube_face right"></div>
+                    <div class="cube_face left"></div>
+                    <div class="cube_face top"></div>
+                    <div class="cube_face bottom"></div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
 
 
 
-    <script defer="defer" src="875.min.js"></script>
-    <script src="main.min.js"></script>
+    <!-- <script defer="defer" src="875.min.js"></script>
+    <script src="main.min.js"></script> -->
     <script defer="defer" src="main.js"></script>
 </body>
 
