--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>김무선의 포트폴리오</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         referrerpolicy="no-referrer"></script>
     <script type="text/javascript">
@@ -22,9 +23,25 @@
                 <!-- 고정시킬 엘리먼트 sticky -->
                 <div class="cont_box">
                     <ul class="intro_txt">
-                        <h2>
-                            More Nicely <br>
-                            More Develop
+                        <h2 class="pc">
+                            <span>More</span> <span>Nicely</span> <br>
+                            <span>More</span> <span>Develop</span>
+                        </h2>
+                        <h2 class="mb">
+                            <div id="container01">
+                                More
+                                <div id="flip">
+                                    <div>
+                                        <div>Nicely</div>
+                                    </div>
+                                    <div>
+                                        <div>Try</div>
+                                    </div>
+                                    <div>
+                                        <div>Develop</div>
+                                    </div>
+                                </div>
+                            </div>
                         </h2>
                     </ul>
                     <div class="left_mask"></div>
@@ -243,10 +260,13 @@
                 </ul>
             </div>
         </section>
+        <section class="sec04">
+            <p>More Interactive</p>
+        </section>
         <section class="sec_svg">
             <h2 class="fix_tit2">
                 <span>SVG :D</span>
-                <strong>Contact</strong>
+                <strong style="font-size:8vw;">Contact</strong>
             </h2>
             <div class="svg_wrap">
                 <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
@@ -255,10 +275,10 @@
                 </svg>
             </div>
             <figure class="video_wrap">
-                <video src="../video/dance.mp4" muted loop></video>
+                <video src="./video/dance.mp4" muted loop></video>
             </figure>
         </section>
-        <section class="sec04">
+        <section class="sec05">
 
         </section>
 
@@ -266,6 +286,7 @@
 
 
     <script defer="defer" src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
