--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>김무선의 포트폴리오</title>
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         referrerpolicy="no-referrer"></script>
     <script type="text/javascript">
@@ -279,14 +278,31 @@
             </figure>
         </section>
         <section class="sec05">
+            <div class="text_con">
+                <P><span>호랑이</span>를 찾고계신가요?</P>
+                <h3 class="text"></h3>
+            </div>
+            <ul class="call">
+                <li class="kakao">
+                    <a href="https://open.kakao.com/o/sAoRzMxe"></a>
+                    <div class="qr"><img src="./images/kakao_qr.png" alt=""></div>
+                    <p>kakaotalk openchat</p>
+                </li>
+                <li class="mail">
+                    <a href="mailto:2837599@naver.com"></a>
+                    <div class="adress">
+                        <a href="mailto:2837599@naver.com"></a>
+                        2837599@naver.com
+                    </div>
 
+                </li>
+            </ul>
         </section>
 
     </div>
 
 
     <script defer="defer" src="main.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
