--- a/index.html
+++ b/index.html
@@ -290,11 +290,13 @@
                 </li>
                 <li class="mail">
                     <a href="mailto:2837599@naver.com"></a>
-                    <div class="adress">
-                        <a href="mailto:2837599@naver.com"></a>
-                        2837599@naver.com
-                    </div>
-
+                    <div class="adress"><img src="./images/mail.png" alt=""></div>
+                    <p>2837599@naver.com</p>
+                </li>
+                <li class="git">
+                    <a href="mailto:2837599@naver.com"></a>
+                    <div class="git_hub"><img src="./images/Git.png" alt=""></div>
+                    <p>github</p>
                 </li>
             </ul>
         </section>
