--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>김무선의 포트폴리오</title>
     <link rel="stylesheet" href="./main.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        referrerpolicy="no-referrer"></script>
-    <script type="text/javascript">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
         !function (e, n, t) { function r(e, n) { return typeof e === n } function s() { let e, n, t, s, o, i, a; for (var l in w) if (w.hasOwnProperty(l)) { if (e = [], n = w[l], n.name && (e.push(n.name.toLowerCase()), n.options && n.options.aliases && n.options.aliases.length)) for (t = 0; t < n.options.aliases.length; t++)e.push(n.options.aliases[t].toLowerCase()); for (s = r(n.fn, "function") ? n.fn() : n.fn, o = 0; o < e.length; o++)i = e[o], a = i.split("."), 1 === a.length ? Modernizr[a[0]] = s : (!Modernizr[a[0]] || Modernizr[a[0]] instanceof Boolean || (Modernizr[a[0]] = new Boolean(Modernizr[a[0]])), Modernizr[a[0]][a[1]] = s), C.push((s ? "" : "no-") + a.join("-")) } } function o(e) { var n = _.className, t = Modernizr._config.classPrefix || ""; if (x && (n = n.baseVal), Modernizr._config.enableJSClass) { var r = new RegExp("(^|\\s)" + t + "no-js(\\s|$)"); n = n.replace(r, "$1" + t + "js$2") } Modernizr._config.enableClasses && (n += " " + t + e.join(" " + t), x ? _.className.baseVal = n : _.className = n) } function i() { return "function" != typeof n.createElement ? n.createElement(arguments[0]) : x ? n.createElementNS.call(n, "http://www.w3.org/2000/svg", arguments[0]) : n.createElement.apply(n, arguments) } function a(e, n) { return function () { return e.apply(n, arguments) } } function l(e, n, t) { var s; for (var o in e) if (e[o] in n) return t === !1 ? e[o] : (s = n[e[o]], r(s, "function") ? a(s, t || n) : s); return !1 } function f(e, n) { return !!~("" + e).indexOf(n) } function u(e) { return e.replace(/([a-z])-([a-z])/g, function (e, n, t) { return n + t.toUpperCase() }).replace(/^-/, "") } function c(e) { return e.replace(/([A-Z])/g, function (e, n) { return "-" + n.toLowerCase() }).replace(/^ms-/, "-ms-") } function d(n, t, r) { var s; if ("getComputedStyle" in e) { s = getComputedStyle.call(e, n, t); var o = e.console; if (null !== s) r && (s = s.getPropertyValue(r)); else if (o) { var i = o.error ? "error" : "log"; o[i].call(o, "getComputedStyle returning null, its possible modernizr test results are inaccurate") } } else s = !t && n.currentStyle && n.currentStyle[r]; return s } function p() { var e = n.body; return e || (e = i(x ? "svg" : "body"), e.fake = !0), e } function m(e, t, r, s) { var o, a, l, f, u = "modernizr", c = i("div"), d = p(); if (parseInt(r, 10)) for (; r--;)l = i("div"), l.id = s ? s[r] : u + (r + 1), c.appendChild(l); return o = i("style"), o.type = "text/css", o.id = "s" + u, (d.fake ? d : c).appendChild(o), d.appendChild(c), o.styleSheet ? o.styleSheet.cssText = e : o.appendChild(n.createTextNode(e)), c.id = u, d.fake && (d.style.background = "", d.style.overflow = "hidden", f = _.style.overflow, _.style.overflow = "hidden", _.appendChild(d)), a = t(c, e), d.fake ? (d.parentNode.removeChild(d), _.style.overflow = f, _.offsetHeight) : c.parentNode.removeChild(c), !!a } function y(n, r) { var s = n.length; if ("CSS" in e && "supports" in e.CSS) { for (; s--;)if (e.CSS.supports(c(n[s]), r)) return !0; return !1 } if ("CSSSupportsRule" in e) { for (var o = []; s--;)o.push("(" + c(n[s]) + ":" + r + ")"); return o = o.join(" or "), m("@supports (" + o + ") { #modernizr { position: absolute; } }", function (e) { return "absolute" == d(e, null, "position") }) } return t } function g(e, n, s, o) { function a() { c && (delete N.style, delete N.modElem) } if (o = r(o, "undefined") ? !1 : o, !r(s, "undefined")) { var l = y(e, s); if (!r(l, "undefined")) return l } for (var c, d, p, m, g, v = ["modernizr", "tspan", "samp"]; !N.style && v.length;)c = !0, N.modElem = i(v.shift()), N.style = N.modElem.style; for (p = e.length, d = 0; p > d; d++)if (m = e[d], g = N.style[m], f(m, "-") && (m = u(m)), N.style[m] !== t) { if (o || r(s, "undefined")) return a(), "pfx" == n ? m : !0; try { N.style[m] = s } catch (h) { } if (N.style[m] != g) return a(), "pfx" == n ? m : !0 } return a(), !1 } function v(e, n, t, s, o) { var i = e.charAt(0).toUpperCase() + e.slice(1), a = (e + " " + T.join(i + " ") + i).split(" "); return r(n, "string") || r(n, "undefined") ? g(a, n, s, o) : (a = (e + " " + z.join(i + " ") + i).split(" "), l(a, n, t)) } function h(e, n, r) { return v(e, t, t, n, r) } var C = [], w = [], S = { _version: "3.6.0", _config: { classPrefix: "", enableClasses: !0, enableJSClass: !0, usePrefixes: !0 }, _q: [], on: function (e, n) { var t = this; setTimeout(function () { n(t[e]) }, 0) }, addTest: function (e, n, t) { w.push({ name: e, fn: n, options: t }) }, addAsyncTest: function (e) { w.push({ name: null, fn: e }) } }, Modernizr = function () { }; Modernizr.prototype = S, Modernizr = new Modernizr; var _ = n.documentElement, x = "svg" === _.nodeName.toLowerCase(), b = S._config.usePrefixes ? " -webkit- -moz- -o- -ms- ".split(" ") : ["", ""]; S._prefixes = b, Modernizr.addTest("csspositionsticky", function () { var e = "position:", n = "sticky", t = i("a"), r = t.style; return r.cssText = e + b.join(n + ";" + e).slice(0, -e.length), -1 !== r.position.indexOf(n) }); var P = "Moz O ms Webkit", T = S._config.usePrefixes ? P.split(" ") : []; S._cssomPrefixes = T; var z = S._config.usePrefixes ? P.toLowerCase().split(" ") : []; S._domPrefixes = z; var E = { elem: i("modernizr") }; Modernizr._q.push(function () { delete E.elem }); var N = { style: E.elem.style }; Modernizr._q.unshift(function () { delete N.style }), S.testAllProps = v, S.testAllProps = h, Modernizr.addTest("cssanimations", h("animationName", "a", !0)), Modernizr.addTest("csstransforms", function () { return -1 === navigator.userAgent.indexOf("Android 2.") && h("transform", "scale(1)", !0) }), Modernizr.addTest("csstransitions", h("transition", "all", !0)), s(), o(C), delete S.addTest, delete S.addAsyncTest; for (var k = 0; k < Modernizr._q.length; k++)Modernizr._q[k](); e.Modernizr = Modernizr }(window, document);
     </script>
 </head>
@@ -17,11 +16,12 @@
 <body>
     <div class="wrap">
         <section class="fix_motion" id="top">
+            <h3 hidden></h3>
             <!-- 스크롤할 거리를 설정하는 엘리먼트 -->
             <article class="sticky_cont">
                 <!-- 고정시킬 엘리먼트 sticky -->
                 <div class="cont_box">
-                    <ul class="intro_txt">
+                    <div class="intro_txt">
                         <h2 class="pc">
                             <span>More</span> <span>Nicely</span> <br>
                             <span>More</span> <span>Develop</span>
@@ -42,53 +42,11 @@
                                 </div>
                             </div>
                         </h2>
-                    </ul>
+                    </div>
                     <div class="left_mask"></div>
                     <div class="right_mask"></div>
-                    <div class="box bg_img">
-                        <div class="tail">
-                            <div class="tail-1"></div>
-                            <div class="tail-2">
-                                <div class="t-stripe-"></div>
-                                <div class="end"></div>
-                            </div>
-                        </div>
-                        <div class="body">
-                            <div class="b-stripe-1"></div>
-                            <div class="arm-1"></div>
-                            <div class="leg-1"></div>
-                        </div>
-                        <div class="tiger">
-                            <div class="head-copy">
-                                <div class="l-ear">
-                                    <div class="ear-center"></div>
-                                </div>
-                                <div class="r-ear">
-                                    <div class="ear-center"></div>
-                                </div>
-                            </div>
-                            <div class="head">
-                                <div class="l-stripe-1"></div>
-                                <div class="l-stripe-2"></div>
-                                <div class="l-eye">
-                                    <div class="shine"></div>
-                                </div>
-                                <div class="r-stripe-1"></div>
-                                <div class="r-stripe-2"></div>
-                                <div class="r-eye">
-                                    <div class="shine"></div>
-                                </div>
-                                <div class="x-stripe-1"></div>
-                                <div class="x-stripe-2"></div>
-                                <div class="y-stripe"></div>
-                                <div class="snout">
-                                    <div class="nose"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="arm-2"></div>
-                        <div class="leg-2"></div>
-                        <div class="ball"></div>
+                    <div class="bg_img">
+                        <img src="./images/tiger_cub.jpeg" alt="">
                     </div>
                     <div class="ending_txt">
                         <div class="tb_row">
@@ -103,6 +61,7 @@
             </article>
         </section>
         <section class="sec01">
+            <h3 hidden></h3>
             <article class="inner">
                 <div class="tb_row">
                     <div class="tb_cell">
@@ -137,6 +96,7 @@
             </article>
         </section>
         <section id="txtMask" class="section_textmask sec_skill">
+            <h3 hidden></h3>
             <article class="txt_area">
                 <ul class="motion_area">
                     <li class="text_box">
@@ -179,6 +139,7 @@
             </article>
         </section>
         <section class="skill_list">
+            <h3 hidden></h3>
             <ul class="skill_icon">
                 <li class="photo"><img src="./images/photo.png" alt="photo"></li>
                 <li class="ill"><img src="./images/ill.png" alt="ill"></li>
@@ -205,6 +166,7 @@
             </ul>
         </section>
         <section class="scroll_box sec02">
+            <h3 hidden></h3>
             <div class="fix_box">
                 <p class="txt">새끼호랑이는</p>
                 <p class="txt">이런걸</p>
@@ -260,6 +222,7 @@
             </div>
         </section>
         <section class="sec04">
+            <h3 hidden></h3>
             <p>More Interactive</p>
         </section>
         <section class="sec_svg">
@@ -294,7 +257,7 @@
                     <p>2837599@naver.com</p>
                 </li>
                 <li class="git">
-                    <a href="mailto:2837599@naver.com"></a>
+                    <a href="https://github.com/KimLineless"></a>
                     <div class="git_hub"><img src="./images/Git.png" alt=""></div>
                     <p>github</p>
                 </li>
