--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <span>More</span> <span>Nicely</span> <br>
                             <span>More</span> <span>Develop</span>
                         </h2>
-                        <h2 class="mb">
+                        <div class="mb">
                             <div id="container01">
                                 More
                                 <div id="flip">
@@ -41,7 +41,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </h2>
+                        </div>
                     </div>
                     <div class="left_mask"></div>
                     <div class="right_mask"></div>
