--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <section class="sec05">
             <div class="text_con">
                 <P><span>호랑이</span>를 찾고계신가요?</P>
-                <h3 class="text"></h3>
+                <h3 class="text1"></h3>
             </div>
             <ul class="call">
                 <li class="kakao">
@@ -258,7 +258,7 @@
                 </li>
                 <li class="git">
                     <a href="https://github.com/KimLineless"></a>
-                    <div class="git_hub"><img src="./images/Git.png" alt=""></div>
+                    <div class="git_hub"><img src="./images/git.png" alt=""></div>
                     <p>github</p>
                 </li>
             </ul>
