--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="left_mask"></div>
                     <div class="right_mask"></div>
                     <div class="bg_img">
-                        <img src="./images/tiger_cub.jpeg" alt="">
+                        <img src="./images/tiger_cub.png" alt="">
                     </div>
                     <div class="ending_txt">
                         <div class="tb_row">
