--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h2 class="fix_tit">
                 <!-- 타이틀 -->
                 <span>HELLO :D</span>
-                <a href="#"><strong style="font-size:8vw;"></strong></a>
+                <a href="#" target="_blank"><strong style="font-size:8vw;"></strong></a>
             </h2>
             <div id="a" class="section03 fixed"></div>
             <div id="b" class="section03"></div>
